# ChangeLog for media-libs/gstreamer
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/gstreamer/ChangeLog,v 1.52 2004/03/23 19:16:53 mholzer Exp $

  23 Mar 2004; Martin Holzer <mholzer@gentoo.org> :
  fixing depend qa issue. see 45343.

*gstreamer-0.8.0 (21 Mar 2004)

  21 Mar 2004; foser <foser@gentoo.org> gstreamer-0.8.0.ebuild :
  Gnome 2.6 commit
  Remove unversioned binaries by default

  15 Mar 2004; Stephen P. Becker <geoman@gentoo.org> gstreamer-0.6.4.ebuild:
  Added ~mips keyword.

  07 Mar 2004; Jon Portnoy <avenj@gentoo.org> gstreamer-0.6.4.ebuild :
  Stable on AMD64.

  10 Feb 2004; Bartosch Pixa <darkspecter@gentoo.org> gstreamer-0.6.4.ebuild:
  set ppc in keywords

  28 Jan 2004; Aron Griffis <agriffis@gentoo.org> gstreamer-0.6.4.ebuild:
  stable on alpha and ia64

  18 Jan 2004; <gustavoz@gentoo.org> gstreamer-0.6.4.ebuild:
  stable on sparc

  09 Dec 2003; Heinrich Wendel <lanius@gentoo.org> gstreamer-0.6.0-r2.ebuild:
  changed app-text/ghostscript to virtual/ghostscript

  14 Nov 2003; Aron Griffis <agriffis@gentoo.org> gstreamer-0.6.3.ebuild,
  files/gstreamer-0.6.3-Werror.patch:
  Mark stable on ia64

  08 Nov 2003; Todd Sunderlin <todd@gentoo.org> gstreamer-0.6.3.ebuild:
  added sparc keyword

  24 Oct 2003; Luca Barbato <lu_zero@gentoo.org> gstreamer-0.6.4.ebuild :
  Added a ppc related patch

*gstreamer-0.6.4 (23 Oct 2003)

  21 Nov 2003; Guy Martin <gmsoft@gentoo.org> gstreamer-0.6.4.ebuild, 
  gstreamer-0.6.3.ebuild :
  Added build fix for hppa.

  23 Oct 2003; foser <foser@gentoo.org> gstreamer-0.6.4.ebuild :
  Add some hacks to have at least some docs build
  Removed old nasm, popt and zlib deps

  22 Oct 2003; Bartosch Pixa <darkspecter@gentoo.org> gstreamer-0.6.3.ebuild:
  set ppc in keywords

  17 Oct 2003; Aron Griffis <agriffis@gentoo.org> gstreamer-0.6.3.ebuild:
  Stable on alpha
