@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/gstreamer
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/gstreamer/ChangeLog,v 1.52 2004/03/23 19:16:53 mholzer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/gstreamer/ChangeLog,v 1.53 2004/03/28 15:36:20 lu_zero Exp $
+
+  28 Mar 2004; Luca Barbato <lu_zero@gentoo.org> gstreamer-0.8.0.ebuild:
+  Removed an unnecessary patch.
 
   23 Mar 2004; Martin Holzer <mholzer@gentoo.org> :
   fixing depend qa issue. see 45343.
